Archive2/a4/33beacbb08c32c/output
main.cpp: In function 'int main()':
main.cpp:40:38: error: conversion from 'std::tuple<>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = awesome_tuple_cat( );
                                      ^
main.cpp:41:44: error: conversion from 'std::tuple<bool, char, short int, int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} __ = awesome_tuple_cat( a, b );
                                            ^
main.cpp:42:48: error: conversion from 'std::tuple<bool, char, short int, int, long long int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} ___ = awesome_tuple_cat( a, b, c );
                                                ^
